[gd_scene load_steps=14 format=2]

[ext_resource path="res://Assets/Room.png" type="Texture" id=1]
[ext_resource path="res://Assets/Light.png" type="Texture" id=2]
[ext_resource path="res://Scripts/Menu.gd" type="Script" id=3]
[ext_resource path="res://Assets/Particle.png" type="Texture" id=4]
[ext_resource path="res://Assets/Title01.png" type="Texture" id=5]
[ext_resource path="res://Assets/electric.wav" type="AudioStream" id=6]
[ext_resource path="res://Assets/511434__theoter__dark-ambient-music.mp3" type="AudioStream" id=7]
[ext_resource path="res://Assets/Nacho.ttf" type="DynamicFontData" id=13]

[sub_resource type="Gradient" id=1]
offsets = PoolRealArray( 2.12274e-08, 0.507576, 1 )
colors = PoolColorArray( 0.168627, 0.156863, 0.156863, 0, 0.47451, 0.364706, 0.364706, 0.701961, 0.415686, 0.392157, 0.392157, 0 )

[sub_resource type="GradientTexture" id=2]
gradient = SubResource( 1 )

[sub_resource type="ParticlesMaterial" id=3]
emission_shape = 2
emission_box_extents = Vector3( 1000, 1000, 0 )
flag_disable_z = true
direction = Vector3( 0, 0, 0 )
spread = 180.0
gravity = Vector3( -5, -5, 0 )
initial_velocity = 0.01
initial_velocity_random = 1.0
angular_velocity = 10.0
angular_velocity_random = 1.0
orbit_velocity = 0.01
orbit_velocity_random = 1.0
linear_accel = 10.0
linear_accel_random = 1.0
scale = 0.05
scale_random = 0.3
color_ramp = SubResource( 2 )

[sub_resource type="DynamicFont" id=7]
size = 128
outline_size = 8
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 13 )

[sub_resource type="DynamicFont" id=9]
size = 80
outline_size = 5
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 13 )

[node name="Menu" type="Node2D"]
script = ExtResource( 3 )

[node name="Wall" type="Sprite" parent="."]
z_index = -10
texture = ExtResource( 1 )
centered = false

[node name="Light2D" type="Light2D" parent="."]
position = Vector2( 961, -85 )
scale = Vector2( 4.63486, 7.60336 )
enabled = false
texture = ExtResource( 2 )
shadow_enabled = true
shadow_color = Color( 0.537255, 0.262745, 0.262745, 0 )

[node name="Timer" type="Timer" parent="."]
one_shot = true

[node name="Timer2" type="Timer" parent="."]
one_shot = true

[node name="Particles2D" type="Particles2D" parent="."]
position = Vector2( 966, 509 )
amount = 100
lifetime = 8.0
preprocess = 1.0
randomness = 1.0
process_material = SubResource( 3 )
texture = ExtResource( 4 )

[node name="Electric" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )
volume_db = -3.0
pitch_scale = 0.74

[node name="Background" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )
volume_db = -5.0
autoplay = true

[node name="Title" type="Sprite" parent="."]
position = Vector2( 960, 544 )
texture = ExtResource( 5 )

[node name="Text" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0

[node name="Points" type="Label" parent="Text"]
margin_left = 601.0
margin_top = 666.0
margin_right = 1350.0
margin_bottom = 787.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 7 )
text = "Touch to start"
align = 1

[node name="Plays" type="Label" parent="Text"]
margin_left = 259.0
margin_top = 995.0
margin_right = 1667.0
margin_bottom = 1102.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 9 )
text = "Ignacio Alvarado"
align = 1

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="Timer2" to="." method="_on_Timer2_timeout"]
